Upgrade sbt-extras and sbt version to 13.2, to get incremental compile with name hashing